Fix html overflow-y

--- a/css/themes/basic.css
+++ b/css/themes/basic.css
@@ -8,7 +8,7 @@
 
 html {
 	height: 100%;
-	overflow-y: hidden;
+	overflow-y: auto;
 }
 
 body {
